--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,13 @@
         }
     ],
     "require": {
-    	"slim/slim":"2.0",
+        "slim/slim": "2.0",
         "rain/raintpl": ">=3.0.0",
         "phpmailer/phpmailer": "^6.9.1"
     },
     "autoload": {
         "psr-4": {
-            "": "vendor\\hcodebr\\php-classes\\src"
+            "Hcode\\DB\\": "vendor/hcodebr/php-classes/src/DB"
         }
     }
 }
